--- a/src/maintenance.html
+++ b/src/maintenance.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/maintenance.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>Club des Vikings de Rouen - MAINTENANCE</title>
 </head>
 <body class="bg-404">
@@ -26,9 +27,22 @@
 				Vous pouvez nous contacter via:
 			</div>
 			<br>
-			<div>
-				<a href="https://www.instagram.com/vikingsderouen/">Instagram</a> | 
-				<a href="https://www.facebook.com/vikingsderouen/">Facebook</a>
+			<div >
+				<a class="medi-icones" href="https://www.instagram.com/vikingsderouen/">
+					<i class="bi bi-instagram"></i>
+				</a> 
+				<span>|</span> 
+				<a class="medi-icones" href="https://www.facebook.com/vikingsderouen/">
+					<i class="bi bi-facebook"></i>
+				</a>
+				  <span>|</span> 
+				<a class="medi-icones" href="https://twitter.com/vikingsderouen">
+					<i class="bi bi-twitter-x"></i>
+				</a>
+				<span>|</span> 
+				<a class="medi-icones" href="https://www.linkedin.com/company/club-des-vikings-de-rouen">
+					<i class="bi bi-linkedin"></i>
+				</a>
 			</div>
 		</section>
 
